[metadata]
# replace with your username:
name = libmist
version = 1.3.0
author = Andrew Banman
author_email = abanman@pnri.org
description = Mist - Multivariable Information Theory-based relationship search tool
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/andbanman/mist
project_urls =
    Bug Tracker = https://github.com/andbanman/mist/issues
classifiers =
    Programming Language :: C++
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

# mark as a binary extension
distclass = BinaryDistribution
# include precompiled binaries
include_package_data = True

[options.package_data]
* = *.so, extern/*.so.*

[options.packages.find]
where = src
